feat: enter command for integrated user setup + typing + compose refactoring + version command for nuspawn meta info + reusing initialization code in envire repo

--- a/example/config/distrobox-like.ini
+++ b/example/config/distrobox-like.ini
@@ -1,10 +1,17 @@
 [Network]
 VirtualEthernet=no
 
-[Files]
-BindUser=your_user_here
-Bind=/home:/home
-TemporaryFileSystem=/tmp
-Environment=DISPLAY=:0
+[Exec]
 Boot=yes
-PrivateUsers=yes
+Environment=DISPLAY=:0
+Environment=TERM=xterm-256color
+Environment=WAYLAND_DISPLAY=wayland-1
+Environment=XDG_RUNTIME_DIR=/run/user/1000
+SystemCallFilter=add_key keyctl bpf
+
+[Files]
+Bind=/home:/home
+Bind=/dev/fuse:/dev/fuse
+BindReadOnly=/run/user:/run/user
+Bind=/dev/dri:/dev/dri
+BindUser=tulili
