feat: split off pulling functionallity from init
This commit also adds:
- Seamless integration in nuspawn enter when not booting into machine
- Better spelling for documentation
- Proper machinectl output when that is necessary
- Compose fixes for the changes

--- a/example/compose/debian.yaml
+++ b/example/compose/debian.yaml
@@ -1,5 +1,5 @@
 # Version is required due to future breaking changes, it will not let you use old versions on newer versions, not letting you just break the application
-version: '0.5'
+version: "0.7"
 
 # Array of machine objects
 machines: 
@@ -7,31 +7,32 @@ machines:
     image: debian
     tag: sid
     type: raw
+    no_setup: true
     env:
       - DEBIAN_FRONTEND=noninteractive
     init_commands: 
       - rm -f /etc/apt/apt.conf.d/docker-gzip-indexes /etc/apt/apt.conf.d/docker-no-languages
       - apt update -y && apt upgrade -y 
-      - apt install -y cockpit
+      - apt install -y systemd-userdbd
     inline_config: |
       [Network]
-      VirtualEthernet=no    
+      VirtualEthernet=no
     properties:
       - MaxQuota=200
       - MaxMemory=2G
-  - name: bantic
-    image: ubuntu
-    tag: mantic
-    type: raw
-    env:
-      - DEBIAN_FRONTEND=noninteractive
-    init_commands: 
-      - rm -f /etc/apt/apt.conf.d/docker-gzip-indexes /etc/apt/apt.conf.d/docker-no-languages
-      - apt update -y && apt upgrade -y 
-      - apt install -y cockpit
-    inline_config: |
-      [Network]
-      VirtualEthernet=no    
-    properties:
-      - MaxQuota=200
-      - MaxMemory=2G
+  #- name: bantic
+  #  image: ubuntu
+  #  tag: mantic
+  #  type: raw
+  #  env:
+  #    - DEBIAN_FRONTEND=noninteractive
+  #  init_commands: 
+  #    - rm -f /etc/apt/apt.conf.d/docker-gzip-indexes /etc/apt/apt.conf.d/docker-no-languages
+  #    - apt update -y && apt upgrade -y 
+  #    - apt install -y cockpit
+  #  inline_config: |
+  #    [Network]
+  #    VirtualEthernet=no    
+  #  properties:
+  #    - MaxQuota=200
+  #    - MaxMemory=2G
