--- a/example/compose/distrobox-like.yaml
+++ b/example/compose/distrobox-like.yaml
@@ -1,4 +1,4 @@
-version: '0.5'
+version: '0.7'
 
 machines: 
   - name: debox
@@ -11,9 +11,9 @@ machines:
       - rm -f /etc/apt/apt.conf.d/docker-gzip-indexes /etc/apt/apt.conf.d/docker-no-languages
       - sed -Ei 's/^(hosts:.*)(\<files\>)\s*(.*)/\1\2 myhostname \3/' /etc/nsswitch.conf
       - apt update -y && apt upgrade -y 
-      - apt install -y bash-completion bc bzip2 diffutils findutils flatpak-xdg-utils git gnupg gpgsm hostname iproute2 iputils-tracepath keyutils less libcap2-bin libkrb5-3 libnss-mdns lsof man-db manpages mtr nano openssh-client passwd pigz procps rsync sudo tcpdump time traceroute tree unzip util-linux wget xauth xz-utils zip fuse-overlayfs 
+      - apt install -y bash-completion bc bzip2 diffutils findutils flatpak-xdg-utils git gnupg gpgsm hostname iproute2 iputils-tracepath keyutils less libcap2-bin libkrb5-3 libnss-mdns lsof man-db manpages mtr nano openssh-client passwd pigz procps rsync sudo tcpdump time traceroute tree unzip util-linux wget xauth xz-utils zip fuse-overlayfs docker.io sudo
       - sed -i -e 's/ ALL$/ NOPASSWD:ALL/' /etc/sudoers
-      - echo VARIANT_ID=container >> /etc/os-release
+      - echo 'VARIANT_ID=container' >> /etc/os-release
     inline_config: |
       [Network]
       VirtualEthernet=no
@@ -22,12 +22,11 @@ machines:
       Environment=DISPLAY=:0
       Environment=TERM=xterm-256color
       Environment=WAYLAND_DISPLAY=wayland-1
-      Environment=XDG_RUNTIME_DIR=/run/user/1000
       SystemCallFilter=add_key keyctl bpf
       [Files]
       Bind=/home:/home
       Bind=/dev/fuse:/dev/fuse
-      BindReadOnly=/run/user:/run/user
+      Bind=/run/user:/run/user
       Bind=/dev/dri:/dev/dri
-    #properties:
-    #  - DeviceAllow='/dev/fuse rwm'
+    properties:
+      - DeviceAllow=/dev/fuse rwm
